# bunker

./: .editorconfig  .zenodo.json  CITATION.cff  Cargo.toml  README.md  ci-installer.nix  citation.bib  crane.nix  default.nix  flake.nix  garnix.yaml  justfile  opt.nix  package.nix  renovate.json5  shell.nix
.forge/proxy/: Cargo.toml
.forge/proxy/src/: main.rs
.github/: install-bunker-ci.sh
bunker/: .zenodo.json  CITATION.cff  Cargo.toml  build.rs
bunker/benches/: chunking.rs
bunker/src/: cache.rs  error.rs  lib.rs
bunker/src/api/: binary_cache.rs
bunker/src/api/v1/: cache_config.rs  upload_path.rs
bunker/src/hash/: mod.rs
bunker/src/hash/tests/: mod.rs
bunker/src/nix_store/: mod.rs  nix_store.rs
bunker/src/nix_store/bindings/: mod.rs  nix.cpp  nix.hpp
bunker/src/nix_store/tests/: README.md  mod.rs  test_nar.rs
bunker/src/nix_store/tests/drv/: no-deps.nix  with-deps.nix
bunker/src/nix_store/tests/nar/: 544qcchwgcgpz3xi1bbml28f8jj6009p-attic-test-with-deps-b  n7q4i7rlmbk4xz8qdsxpm6jbhrnxraq2-attic-test-with-deps-a
bunker/src/signing/: mod.rs  tests.rs
bunker/src/testing/shadow_store/: mod.rs
client/: Cargo.toml
client/src/: cache.rs  cli.rs  config.rs  push.rs  version.rs
client/src/api/: mod.rs
client/src/command/: cache.rs  get_closure.rs  login.rs  push.rs  watch_store.rs
flake/: devshells.nix  distributor.nix  integration-tests.nix  nix-versions.nix  nixos.nix  overlays.nix  packages.nix
integration-tests/: README.md
integration-tests/basic/: default.nix
nixos/: bunkerd.nix
server/: Cargo.toml
server/src/: config-template.toml  config.rs  error.rs  gc.rs  lib.rs  main.rs  middleware.rs  oobe.rs
server/src/access/: http.rs  mod.rs  tests.rs
server/src/adm/: main.rs
server/src/adm/command/: make_token.rs
server/src/api/: binary_cache.rs  placeholder.html
server/src/api/v1/: cache_config.rs  get_missing_paths.rs  mod.rs  upload_path.rs
server/src/database/: mod.rs
server/src/database/entity/: cache.rs  chunkref.rs  object.rs
server/src/narinfo/: mod.rs  tests.rs
server/src/nix_manifest/: mod.rs
server/src/storage/: s3.rs
token/: Cargo.toml
token/src/: lib.rs  tests.rs
