[workspace]
resolver = "3"

members = [
	"bunker",
	"client",
    "proxy",
	"server",
	"token",
]

[package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
oqs = { version = "0.10.1", default-features = false, features = ["vendored", "kems", "sigs"] }
oqs-sys = { version = "0.10.1", default-features = false, features = ["vendored", "kems", "sigs"] }
[profile.release]
opt-level = 3
lto = true
debug = 1

[workspace.metadata]
rustfmt = { edition = "2024" }

[profile.dev]
opt-level = 1
debug = 2

[profile.bench]
opt-level = 3
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 3
debug = 1
