# /qompassai/bunker/Cargo.toml
# Qompass AI Bunker Cargo Config



[workspace]
resolver = "3"
members = ["bunker", "client", "server", "token"]

[workspace.dependencies]
oqs = { version = "0.10.1", default-features = false, features = [
  "kems",
  "sigs",
  "vendored",
] }
oqs-sys = { version = "0.10.1", default-features = false, features = [
  "kems",
  "sigs",
  "vendored",
] }

[workspace.metadata]
rustfmt = { edition = "2024" }

[profile.release]
opt-level = 3
debug = 1
lto = true

[profile.dev]
opt-level = 1
debug = 2

[profile.bench]
opt-level = 3
debug = 1

