[package]
name = "bunker-token"
version = "0.1.0"
edition = "2024"


[dependencies]
bunker = { path = "../bunker", default-features = false }

base64 = "0.22.1"
chrono = "0.4.31"
displaydoc = "0.2.4"
indexmap = { version = "2.2.6", features = ["serde"] }
jwt-simple = "0.11.5"
lazy_static = "1.4.0"
regex = "1.8.3"
serde = "1.0.163"
serde_with = "3.0.0"
tracing = "0.1.37"
rsa = "0.9.3"
